# NeuralNetwork

./: .gitignore  pyproject.toml
codes/: mnist.py
codes/AttentionRNN/: AttentionRNN.ipynb  train.ipynb
codes/Embedding/: embedding.ipynb
codes/Tokenizer/: tokenizer.ipynb
notebooks/: 1.线性回归与梯度下降法.ipynb  1.线性拟合.ipynb  1.线性拟合与梯度下降法.ipynb  2.感知器模型.ipynb  2.梯度下降法.ipynb  3.多层感知器.ipynb  4.卷积神经网络及残差连接.ipynb  6.循环神经网络和长短期记忆.ipynb  7.深度循环神经网络及语言模型的应用.ipynb  7.自然语言处理.ipynb  8.编解码器模型和注意力机制.ipynb  9.Transformer模型架构.ipynb
saved/: BiLSTM_CRF.pth  ChatDeepRNN.pth
